// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`button Controls > should render a block size button 1`] = `
"<div id="tres-leches-pane-default" class="tl-fixed tl-top-4 tl-z-24 tl-bg-white tl-shadow-xl tl-p-1 tl-font-sans tl-text-xs tl-flex tl-flex-col tl-rounded-lg" style="top: 10px; width: 280px; height: 340px; right: 16px;">
  <header class="tl-flex tl-justify-between tl-items-center tl-text-gray-200 tl-text-xs tl-flex-none">
    <div class="w-1/3"></div>
    <div class="tl-cursor-grabbing"><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i></div>
    <div></div><i class="tl-h-4 tl-w-4 tl-p-1.5 tl-flex tl-items-center tl-line-height-0 tl-rounded-full tl-bg-gray-100 tl-text-xs tl-cursor-pointer">🍰</i>
  </header>
  <div class="tl-flex-1 tl-overflow-y-auto tl-overflow-x-hidden tl-my-4 tl-scrollbar tl-scrollbar-rounded tl-scrollbar-w-4px tl-scrollbar-radius-2 tl-scrollbar-track-radius-4 tl-scrollbar-thumb-radius-4">
    <!--v-if-->
    <div>
      <div class="tl-p-2 tl-inline-flex"><button data-v-9a5f9367="" class="leches-btn leches-btn-primary leches-btn-block"><i data-v-9a5f9367="" class="mr-1"></i> Accept</button></div>
    </div>
  </div><!-- Resize handles -->
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"
      @mousedown="e => startResize('right', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-right-0 tl-bottom-0 tl-h-2 hover:tl-h-4 tl-transition-all tl-cursor-ns-resize tl-z-10"></span>
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nwse-resize tl-z-10"
      @mousedown="e => startResize('corner', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"></span><span class="tl-absolute tl-left-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nesw-resize tl-z-10"></span>
</div>"
`;

exports[`button Controls > should render a button 1`] = `
"<div id="tres-leches-pane-default" class="tl-fixed tl-top-4 tl-z-24 tl-bg-white tl-shadow-xl tl-p-1 tl-font-sans tl-text-xs tl-flex tl-flex-col tl-rounded-lg" style="top: 10px; width: 280px; height: 340px; right: 16px;">
  <header class="tl-flex tl-justify-between tl-items-center tl-text-gray-200 tl-text-xs tl-flex-none">
    <div class="w-1/3"></div>
    <div class="tl-cursor-grabbing"><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i></div>
    <div></div><i class="tl-h-4 tl-w-4 tl-p-1.5 tl-flex tl-items-center tl-line-height-0 tl-rounded-full tl-bg-gray-100 tl-text-xs tl-cursor-pointer">🍰</i>
  </header>
  <div class="tl-flex-1 tl-overflow-y-auto tl-overflow-x-hidden tl-my-4 tl-scrollbar tl-scrollbar-rounded tl-scrollbar-w-4px tl-scrollbar-radius-2 tl-scrollbar-track-radius-4 tl-scrollbar-thumb-radius-4">
    <!--v-if-->
    <div>
      <div class="tl-p-2 tl-inline-flex"><button data-v-9a5f9367="" class="leches-btn leches-btn-primary leches-btn-sm"><i data-v-9a5f9367="" class="mr-1"></i> Accept</button></div>
    </div>
  </div><!-- Resize handles -->
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"
      @mousedown="e => startResize('right', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-right-0 tl-bottom-0 tl-h-2 hover:tl-h-4 tl-transition-all tl-cursor-ns-resize tl-z-10"></span>
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nwse-resize tl-z-10"
      @mousedown="e => startResize('corner', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"></span><span class="tl-absolute tl-left-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nesw-resize tl-z-10"></span>
</div>"
`;

exports[`button Controls > should render a button with a label 1`] = `
"<div id="tres-leches-pane-default" class="tl-fixed tl-top-4 tl-z-24 tl-bg-white tl-shadow-xl tl-p-1 tl-font-sans tl-text-xs tl-flex tl-flex-col tl-rounded-lg" style="top: 10px; width: 280px; height: 340px; right: 16px;">
  <header class="tl-flex tl-justify-between tl-items-center tl-text-gray-200 tl-text-xs tl-flex-none">
    <div class="w-1/3"></div>
    <div class="tl-cursor-grabbing"><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i></div>
    <div></div><i class="tl-h-4 tl-w-4 tl-p-1.5 tl-flex tl-items-center tl-line-height-0 tl-rounded-full tl-bg-gray-100 tl-text-xs tl-cursor-pointer">🍰</i>
  </header>
  <div class="tl-flex-1 tl-overflow-y-auto tl-overflow-x-hidden tl-my-4 tl-scrollbar tl-scrollbar-rounded tl-scrollbar-w-4px tl-scrollbar-radius-2 tl-scrollbar-track-radius-4 tl-scrollbar-thumb-radius-4">
    <!--v-if-->
    <div>
      <div class="tl-p-2 tl-inline-flex"><button data-v-9a5f9367="" class="leches-btn leches-btn-primary leches-btn-sm"><i data-v-9a5f9367="" class="mr-1"></i> Accept</button></div>
    </div>
  </div><!-- Resize handles -->
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"
      @mousedown="e => startResize('right', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-right-0 tl-bottom-0 tl-h-2 hover:tl-h-4 tl-transition-all tl-cursor-ns-resize tl-z-10"></span>
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nwse-resize tl-z-10"
      @mousedown="e => startResize('corner', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"></span><span class="tl-absolute tl-left-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nesw-resize tl-z-10"></span>
</div>"
`;

exports[`button Controls > should render a large button 1`] = `
"<div id="tres-leches-pane-default" class="tl-fixed tl-top-4 tl-z-24 tl-bg-white tl-shadow-xl tl-p-1 tl-font-sans tl-text-xs tl-flex tl-flex-col tl-rounded-lg" style="top: 10px; width: 280px; height: 340px; right: 16px;">
  <header class="tl-flex tl-justify-between tl-items-center tl-text-gray-200 tl-text-xs tl-flex-none">
    <div class="w-1/3"></div>
    <div class="tl-cursor-grabbing"><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i></div>
    <div></div><i class="tl-h-4 tl-w-4 tl-p-1.5 tl-flex tl-items-center tl-line-height-0 tl-rounded-full tl-bg-gray-100 tl-text-xs tl-cursor-pointer">🍰</i>
  </header>
  <div class="tl-flex-1 tl-overflow-y-auto tl-overflow-x-hidden tl-my-4 tl-scrollbar tl-scrollbar-rounded tl-scrollbar-w-4px tl-scrollbar-radius-2 tl-scrollbar-track-radius-4 tl-scrollbar-thumb-radius-4">
    <!--v-if-->
    <div>
      <div class="tl-p-2 tl-inline-flex"><button data-v-9a5f9367="" class="leches-btn leches-btn-primary leches-btn-lg"><i data-v-9a5f9367="" class="mr-1"></i> Accept</button></div>
    </div>
  </div><!-- Resize handles -->
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"
      @mousedown="e => startResize('right', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-right-0 tl-bottom-0 tl-h-2 hover:tl-h-4 tl-transition-all tl-cursor-ns-resize tl-z-10"></span>
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nwse-resize tl-z-10"
      @mousedown="e => startResize('corner', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"></span><span class="tl-absolute tl-left-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nesw-resize tl-z-10"></span>
</div>"
`;

exports[`button Controls > should render a primary button variant by default 1`] = `
"<div id="tres-leches-pane-default" class="tl-fixed tl-top-4 tl-z-24 tl-bg-white tl-shadow-xl tl-p-1 tl-font-sans tl-text-xs tl-flex tl-flex-col tl-rounded-lg" style="top: 10px; width: 280px; height: 340px; right: 16px;">
  <header class="tl-flex tl-justify-between tl-items-center tl-text-gray-200 tl-text-xs tl-flex-none">
    <div class="w-1/3"></div>
    <div class="tl-cursor-grabbing"><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i></div>
    <div></div><i class="tl-h-4 tl-w-4 tl-p-1.5 tl-flex tl-items-center tl-line-height-0 tl-rounded-full tl-bg-gray-100 tl-text-xs tl-cursor-pointer">🍰</i>
  </header>
  <div class="tl-flex-1 tl-overflow-y-auto tl-overflow-x-hidden tl-my-4 tl-scrollbar tl-scrollbar-rounded tl-scrollbar-w-4px tl-scrollbar-radius-2 tl-scrollbar-track-radius-4 tl-scrollbar-thumb-radius-4">
    <!--v-if-->
    <div>
      <div class="tl-p-2 tl-inline-flex"><button data-v-9a5f9367="" class="leches-btn leches-btn-primary leches-btn-sm"><i data-v-9a5f9367="" class="mr-1"></i> Accept</button></div>
    </div>
  </div><!-- Resize handles -->
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"
      @mousedown="e => startResize('right', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-right-0 tl-bottom-0 tl-h-2 hover:tl-h-4 tl-transition-all tl-cursor-ns-resize tl-z-10"></span>
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nwse-resize tl-z-10"
      @mousedown="e => startResize('corner', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"></span><span class="tl-absolute tl-left-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nesw-resize tl-z-10"></span>
</div>"
`;

exports[`button Controls > should render a secondary button variant 1`] = `
"<div id="tres-leches-pane-default" class="tl-fixed tl-top-4 tl-z-24 tl-bg-white tl-shadow-xl tl-p-1 tl-font-sans tl-text-xs tl-flex tl-flex-col tl-rounded-lg" style="top: 10px; width: 280px; height: 340px; right: 16px;">
  <header class="tl-flex tl-justify-between tl-items-center tl-text-gray-200 tl-text-xs tl-flex-none">
    <div class="w-1/3"></div>
    <div class="tl-cursor-grabbing"><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i></div>
    <div></div><i class="tl-h-4 tl-w-4 tl-p-1.5 tl-flex tl-items-center tl-line-height-0 tl-rounded-full tl-bg-gray-100 tl-text-xs tl-cursor-pointer">🍰</i>
  </header>
  <div class="tl-flex-1 tl-overflow-y-auto tl-overflow-x-hidden tl-my-4 tl-scrollbar tl-scrollbar-rounded tl-scrollbar-w-4px tl-scrollbar-radius-2 tl-scrollbar-track-radius-4 tl-scrollbar-thumb-radius-4">
    <!--v-if-->
    <div>
      <div class="tl-p-2 tl-inline-flex"><button data-v-9a5f9367="" class="leches-btn leches-btn-secondary leches-btn-sm"><i data-v-9a5f9367="" class="mr-1"></i> Accept</button></div>
    </div>
  </div><!-- Resize handles -->
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"
      @mousedown="e => startResize('right', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-right-0 tl-bottom-0 tl-h-2 hover:tl-h-4 tl-transition-all tl-cursor-ns-resize tl-z-10"></span>
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nwse-resize tl-z-10"
      @mousedown="e => startResize('corner', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"></span><span class="tl-absolute tl-left-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nesw-resize tl-z-10"></span>
</div>"
`;

exports[`button Controls > should render a small button 1`] = `
"<div id="tres-leches-pane-default" class="tl-fixed tl-top-4 tl-z-24 tl-bg-white tl-shadow-xl tl-p-1 tl-font-sans tl-text-xs tl-flex tl-flex-col tl-rounded-lg" style="top: 10px; width: 280px; height: 340px; right: 16px;">
  <header class="tl-flex tl-justify-between tl-items-center tl-text-gray-200 tl-text-xs tl-flex-none">
    <div class="w-1/3"></div>
    <div class="tl-cursor-grabbing"><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i></div>
    <div></div><i class="tl-h-4 tl-w-4 tl-p-1.5 tl-flex tl-items-center tl-line-height-0 tl-rounded-full tl-bg-gray-100 tl-text-xs tl-cursor-pointer">🍰</i>
  </header>
  <div class="tl-flex-1 tl-overflow-y-auto tl-overflow-x-hidden tl-my-4 tl-scrollbar tl-scrollbar-rounded tl-scrollbar-w-4px tl-scrollbar-radius-2 tl-scrollbar-track-radius-4 tl-scrollbar-thumb-radius-4">
    <!--v-if-->
    <div>
      <div class="tl-p-2 tl-inline-flex"><button data-v-9a5f9367="" class="leches-btn leches-btn-primary leches-btn-sm"><i data-v-9a5f9367="" class="mr-1"></i> Accept</button></div>
    </div>
  </div><!-- Resize handles -->
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"
      @mousedown="e => startResize('right', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-right-0 tl-bottom-0 tl-h-2 hover:tl-h-4 tl-transition-all tl-cursor-ns-resize tl-z-10"></span>
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nwse-resize tl-z-10"
      @mousedown="e => startResize('corner', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"></span><span class="tl-absolute tl-left-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nesw-resize tl-z-10"></span>
</div>"
`;

exports[`button Controls > should render an icon on the button 1`] = `
"<div id="tres-leches-pane-default" class="tl-fixed tl-top-4 tl-z-24 tl-bg-white tl-shadow-xl tl-p-1 tl-font-sans tl-text-xs tl-flex tl-flex-col tl-rounded-lg" style="top: 10px; width: 280px; height: 340px; right: 16px;">
  <header class="tl-flex tl-justify-between tl-items-center tl-text-gray-200 tl-text-xs tl-flex-none">
    <div class="w-1/3"></div>
    <div class="tl-cursor-grabbing"><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i></div>
    <div></div><i class="tl-h-4 tl-w-4 tl-p-1.5 tl-flex tl-items-center tl-line-height-0 tl-rounded-full tl-bg-gray-100 tl-text-xs tl-cursor-pointer">🍰</i>
  </header>
  <div class="tl-flex-1 tl-overflow-y-auto tl-overflow-x-hidden tl-my-4 tl-scrollbar tl-scrollbar-rounded tl-scrollbar-w-4px tl-scrollbar-radius-2 tl-scrollbar-track-radius-4 tl-scrollbar-thumb-radius-4">
    <!--v-if-->
    <div>
      <div class="tl-p-2 tl-inline-flex"><button data-v-9a5f9367="" class="leches-btn leches-btn-primary leches-btn-sm"><i data-v-9a5f9367="" class="i-carbon-checkmark mr-1"></i> Accept</button></div>
    </div>
  </div><!-- Resize handles -->
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"
      @mousedown="e => startResize('right', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-right-0 tl-bottom-0 tl-h-2 hover:tl-h-4 tl-transition-all tl-cursor-ns-resize tl-z-10"></span>
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nwse-resize tl-z-10"
      @mousedown="e => startResize('corner', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"></span><span class="tl-absolute tl-left-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nesw-resize tl-z-10"></span>
</div>"
`;
